src/objects/Apttus_DealMgr__DealTerm__c.object
<CustomObject>
    <description>Represents the term associated with a deal</description>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObjectId__c</fullName>
        <description>ID of the business object associated with the deal term</description>
        <inlineHelpText>ID of the business object associated with the deal term</inlineHelpText>
        <label>Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObjectType__c</fullName>
        <description>The type of the business object associated with the deal term</description>
        <inlineHelpText>The type of the business object associated with the deal term</inlineHelpText>
        <label>Business Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Comments__c</fullName>
        <description>Comments about this Term in the context of this Deal.</description>
        <inlineHelpText>Comments about this Term in the context of this Deal.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealId__c</fullName>
        <description>ID of the associated deal</description>
        <inlineHelpText>ID of the associated deal</inlineHelpText>
        <label>Deal</label>
        <referenceTo>Apttus_DealMgr__Deal__c</referenceTo>
        <relationshipLabel>Deal Terms</relationshipLabel>
        <relationshipName>DealTerms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>Term description</description>
        <inlineHelpText>Term description</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__RelatedOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated opportunity</description>
        <inlineHelpText>ID of the associated opportunity</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Terms</relationshipLabel>
        <relationshipName>DealTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__TermDetails__c</fullName>
        <description>Short description of the term associated with the deal</description>
        <inlineHelpText>Short description of the term associated with the deal</inlineHelpText>
        <label>Term Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__TermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the master term associated with the deal</description>
        <inlineHelpText>ID of the master term associated with the deal</inlineHelpText>
        <label>Term</label>
        <referenceTo>Apttus__Term_Exception__c</referenceTo>
        <relationshipLabel>Deal Terms</relationshipLabel>
        <relationshipName>DealTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Term</label>
    <nameField>
        <displayFormat>DTE-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>